--- a/assets/postcss/styles.css
+++ b/assets/postcss/styles.css
@@ -21,12 +21,12 @@
         h6:not([class*="text-lg"]):not([class*="text-xs"]):not([class*="text-sm"]):not([class*="text-base"]):not([class*="text-xl"]) {
             @apply text-base;
         }
-        h1:not([class*="mb"]),
-        h2:not([class*="mb"]),
-        h3:not([class*="mb"]),
-        h4:not([class*="mb"]),
-        h5:not([class*="mb"]),
-        h6:not([class*="mb"]) {
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
             @apply mb-4;
         }
         .btn {
