--- a/assets/postcss/styles.css
+++ b/assets/postcss/styles.css
@@ -32,7 +32,8 @@
         .btn {
             transition: background 0.2s 0.1s ease-in-out;
         }
-        .outline-0 {
+        .outline-0,
+        .outline-0:focus {
             outline: none!important;
         }
         [x-cloak] {
